@@ -20,6 +20,7 @@
  */
 
 #include "config.h"
+#include "common.h"
 
 #include <glib.h>
 #include <errno.h>
