@@ -19,7 +19,8 @@
  * $Id$
  */
 
-#include <config.h>
+#include "config.h"
+#include "common.h"
 
 #include <glib.h>
 #include <stdio.h>
